Ajout du style de la div contain et frabrication de la grid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Projet UI</title>
 </head>
 <body>
-    
+    <main>
+        <div class="contain">
+            
+            </div>
+
+        </div>
+    </main>
 </body>
 </html>
